# xmMessaging

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  TODO.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  compare.py  harness.hpp  reference.json  xmmsg_bench.cpp
cmake/: xmMessagingConfig.cmake.in
docs/: LESSONS.md  cookbook.md  design.md  scenarios.md  wire-contract.md
include/xmmessaging/: domain.hpp  endpoints.hpp  messaging.hpp  payload_traits.hpp  qos.hpp  sample.hpp
include/xmmessaging/detail/: bounded_queue.hpp  envelope.hpp  in_process.hpp  introspect_reader.hpp  latest_slot.hpp  mail_record.hpp  placement.hpp  posix_shm.hpp  schema_hash.hpp  shm_segment.hpp  waiter.hpp
include/xmmsg/: domain.hpp  endpoints.hpp  messaging.hpp  sample.hpp  status.hpp
include/xmmsg/detail/: bounded_queue.hpp  in_process.hpp  introspect_reader.hpp  latest_slot.hpp  mail_record.hpp  posix_shm.hpp  schema_hash.hpp  shm_segment.hpp  waiter.hpp
scripts/: bench.sh  quickstart.sh
src/: domain.cpp
test/behavioral/: CMakeLists.txt  alloc_probe.hpp  capture_binding.hpp  m10_behavioral_test.cpp  m11_behavioral_test.cpp  m11_helper_main.cpp  m11_payload.hpp  m13_behavioral_test.cpp  m14_behavioral_test.cpp  m1_behavioral_test.cpp  m2_behavioral_test.cpp  m3_behavioral_test.cpp  m4_behavioral_test.cpp  m5_behavioral_test.cpp  m6_behavioral_test.cpp  m7_behavioral_test.cpp  shm_helper_main.cpp  shm_test_support.hpp  wire_schema_test.cpp
test/link/: CMakeLists.txt  check_default_config.cmake  check_ldd.cmake  libonly_main.cpp
test/scenarios/: m13_pipeline_accounting.cpp  m14_stack_startup.cpp  m1_planning_control_loop.cpp  m2_late_join.cpp  m3_backpressure.cpp  m5_request_response.cpp  m6_reach_transparency.cpp  m7_trace_continuity.cpp  scenario_support.hpp
tools/xmmsg/: CMakeLists.txt  xmmsg.cpp
